--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     <h1>Hello world!</h1>
     <p>Welcome to my GitHub Pages site!</p>
     <a href="https://www.https://omega365.com/></a>
+      <img src="img_chania.jpg" alt="Flowers in Chania" width = "30" height = "30">
   </body>
 </html>
