--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>My GitHub Pages Site</title>
   </head>
   <body>
-    <h1>Hello world!</h1>
+    <h1 style="color:blue;">Hello world!</h1>
     <p>Welcome to my GitHub Pages site!</p>
     <a href="https://www.https://omega365.com/></a>
       <img src="img_chania.jpg" alt="Flowers in Chania" width = "30" height = "30">
