--- a/index.html
+++ b/index.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>My GitHub Pages Site</title>
-  </head>
-  <body>
-    <h1 style="color:blue;">Hello world!</h1>
-    <p>Welcome to my GitHub Pages site!</p>
-    <a href="https://www.https://omega365.com/></a>
-      <img src="img_chania.jpg" alt="Flowers in Chania" width = "30" height = "30">
-  </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <style>
+    .rounded-img {
+      width: 20%;
+      border-radius: 50%;
+      box-shadow: 0 0 10px  rgba(0, 0, 0, 0.4);
+      padding: 0.6em;
+      margin-bottom: 1em;
+    }
+    </style>
+</head>
+<body>
+  <div class="container text-center my-5">
+            <img class="rounded-img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR7-sBKw1wDsy7ZQYjXtnXTWvFExQhLTfI25Q&usqp=CAU" alt="sunset" /> 
+   <h1>Maria Chugueva</h1>
+   <p class="lead text-muted">
+    I like learning new things
+  </p>
+  <a 
+    href="https://omega365.com/" 
+    target="_blank"
+    class="btn btn-primary"
+    >
+    Omega365
+  </a>
+       </div>
+ </body>
 </html>
